--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/style": "^0.8.0",
+    "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.7",
+    "@types/react-dom": "^17.0.11",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
